--- a/slider/index.html
+++ b/slider/index.html
@@ -9,20 +9,46 @@
     </head>
     <body>
         <div class="container-wrp">
-            <div class="container" id="container">
+            <div class="container">
                 <div class="slider-wrp">
-                    <img class="img" src="https://cdn.pixabay.com/photo/2022/10/03/21/47/fog-7496901_960_720.jpg" alt="first">
+                    <img class="img" src="https://cdn.pixabay.com/photo/2022/10/03/21/47/fog-7496901_960_720.jpg">
                 </div>
                 <div class="slider-wrp">
-                    <img class="img" src="https://cdn.pixabay.com/photo/2022/08/24/14/14/horses-7407805_960_720.jpg" alt="second">
+                    <img class="img" src="https://cdn.pixabay.com/photo/2022/08/24/14/14/horses-7407805_960_720.jpg">
                 </div>
                 <div class="slider-wrp">
-                    <img class="img" src="https://cdn.pixabay.com/photo/2021/07/06/19/26/drops-6392473_960_720.jpg" alt="third">
+                    <img class="img" src="https://cdn.pixabay.com/photo/2021/07/06/19/26/drops-6392473_960_720.jpg">
+                </div>
+                <div class="slider-wrp">
+                    <img class="img" src="https://cdn.pixabay.com/photo/2022/09/22/08/41/forest-7471935_960_720.jpg">
+                </div>
+                <div class="slider-wrp">
+                    <img class="img" src="https://cdn.pixabay.com/photo/2022/01/17/23/10/sunset-6945937_960_720.jpg">
+                </div>
+                <div class="slider-wrp">
+                    <img class="img" src="https://cdn.pixabay.com/photo/2022/09/15/12/19/forest-7456344_960_720.jpg">
+                </div>
+                <div class="slider-wrp">
+                    <img class="img" src="https://cdn.pixabay.com/photo/2022/01/03/21/08/street-6913633_960_720.jpg">
+                </div>
+                <div class="slider-wrp">
+                    <img class="img" src="https://cdn.pixabay.com/photo/2022/09/15/11/05/forest-7456238_960_720.jpg">
                 </div>
             </div>
             <div class="controll">
-                <button class="prev" id="prev">prev</button>
-                <button class="next" id="next">next</button>
+                <button class="btn">
+                    <svg width="30" height="30" fill="green" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+                      </svg>
+                </button>
+                <div class="dots">
+
+                </div>
+                <button class="btn">
+                    <svg width="30" height="30" fill="green" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+                    </svg>
+                </button>
             </div>
         </div>
         <script src="js/main.js"></script>
