--- a/sliderGV/index.html
+++ b/sliderGV/index.html
@@ -12,7 +12,7 @@
             <h2 class="section_header">GreenVision – это:</h2>
             <div class="slider__wrp">
                 <div class="slider__img-wrp">
-                    <img src="images/Slide_1.jpg" class="slider__img slider__active-img" alt="slide 1">
+                    <img src="images/Slide_1.jpg" class="slider__img active" alt="slide 1">
                     <img src="images/Slide_2.jpg" class="slider__img" alt="slide 2">
                     <img src="images/Slide_3.jpg" class="slider__img" alt="slide 3">
                     <img src="images/Slide_4.jpg" class="slider__img" alt="slide 4">
