--- a/sliderGV/index.html
+++ b/sliderGV/index.html
@@ -3,6 +3,7 @@
     <head lang="en">
         <meta charset="utf-8">
         <title>Slider</title>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" href="images/Pepe.png" type="image/png">
@@ -20,42 +21,32 @@
                 </div>
                 <div class="slider__sections">
                     <div class="slider__section">
-                        <p class="slider__section-number">01</p>
-                        <div class="slider__section-text-wrp">
+                        <div class="slider__section-header-wrp">
+                            <p class="slider__section-number">01</p>
                             <p class="slider__section-text-header">Видеокамеры и видеорегистраторы</p>
+                        </div>
+                        <div class="slider__section-text-wrp">
                             <p class="slider__section-text">ведут круглосуточный контроль происходящего на объекте. Стабильно передают изображение хорошего качества при естественном или искусственном освещении, а также в условиях плохой видимости.</p>
                             <a href="#" class="slider__section-link">В каталог</a>
                         </div>
                     </div>
                     <div class="slider__section">
-                        <p class="slider__section-number">02</p>
+                        <div class="slider__section-header-wrp">
+                            <p class="slider__section-number">01</p>
+                            <p class="slider__section-text-header">Видеокамеры и видеорегистраторы</p>
+                        </div>
                         <div class="slider__section-text-wrp">
-                            <p class="slider__section-text-header">Видеодомофоны и вызывные панели</p>
-                            <p class="slider__section-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe nobis error, quaerat et deleniti rem optio dolorem iste qui ad praesentium autem maiores corrupti labore tenetur? Tempora cum distinctio saepe.</p>
+                            <p class="slider__section-text">ведут круглосуточный контроль происходящего на объекте. Стабильно передают изображение хорошего качества при естественном или искусственном освещении, а также в условиях плохой видимости.</p>
                             <a href="#" class="slider__section-link">В каталог</a>
                         </div>
                     </div>
                     <div class="slider__section">
-                        <p class="slider__section-number">03</p>
-                        <div class="slider__section-text-wrp">
-                            <p class="slider__section-text-header">Видеодомофоны и вызывные панели</p>
-                            <p class="slider__section-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe nobis error, quaerat et deleniti rem optio dolorem iste qui ad praesentium autem maiores corrupti labore tenetur? Tempora cum distinctio saepe.</p>
-                            <a href="#" class="slider__section-link">В каталог</a>
+                        <div class="slider__section-header-wrp">
+                            <p class="slider__section-number">01</p>
+                            <p class="slider__section-text-header">Видеокамеры и видеорегистраторы</p>
                         </div>
-                    </div>
-                    <div class="slider__section">
-                        <p class="slider__section-number">04</p>
                         <div class="slider__section-text-wrp">
-                            <p class="slider__section-text-header">Видеодомофоны и вызывные панели</p>
-                            <p class="slider__section-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe nobis error, quaerat et deleniti rem optio dolorem iste qui ad praesentium autem maiores corrupti labore tenetur? Tempora cum distinctio saepe.</p>
-                            <a href="#" class="slider__section-link">В каталог</a>
-                        </div>
-                    </div>
-                    <div class="slider__section">
-                        <p class="slider__section-number">05</p>
-                        <div class="slider__section-text-wrp">
-                            <p class="slider__section-text-header">Видеодомофоны и вызывные панели</p>
-                            <p class="slider__section-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe nobis error, quaerat et deleniti rem optio dolorem iste qui ad praesentium autem maiores corrupti labore tenetur? Tempora cum distinctio saepe.</p>
+                            <p class="slider__section-text">ведут круглосуточный контроль происходящего на объекте. Стабильно передают изображение хорошего качества при естественном или искусственном освещении, а также в условиях плохой видимости.</p>
                             <a href="#" class="slider__section-link">В каталог</a>
                         </div>
                     </div>
