--- a/sliderGV/index.html
+++ b/sliderGV/index.html
@@ -2,6 +2,7 @@
 <html>
     <head lang="en">
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Slider</title>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -13,11 +14,13 @@
             <h2 class="section_header">GreenVision – это:</h2>
             <div class="slider__wrp">
                 <div class="slider__img-wrp">
-                    <img src="images/Slide_1.jpg" class="slider__img active" alt="slide 1">
-                    <img src="images/Slide_2.jpg" class="slider__img" alt="slide 2">
-                    <img src="images/Slide_3.jpg" class="slider__img" alt="slide 3">
-                    <img src="images/Slide_4.jpg" class="slider__img" alt="slide 4">
-                    <img src="images/Slide_5.jpg" class="slider__img" alt="slide 5">
+                    <div class="slider__mobile-img-wrp">
+                        <img src="images/Slide_1.jpg" class="slider__img active" alt="slide 1">
+                        <img src="images/Slide_2.jpg" class="slider__img" alt="slide 2">
+                        <img src="images/Slide_3.jpg" class="slider__img" alt="slide 3">
+                        <img src="images/Slide_4.jpg" class="slider__img" alt="slide 4">
+                        <img src="images/Slide_5.jpg" class="slider__img" alt="slide 5">
+                    </div>
                 </div>
                 <div class="slider__sections">
                     <div class="slider__section">
