--- a/sliderGV/index.html
+++ b/sliderGV/index.html
@@ -29,6 +29,26 @@
                             <p class="slider__section-text-header">Видеокамеры и видеорегистраторы</p>
                         </div>
                         <div class="slider__section-text-wrp">
+                            <p class="slider__section-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora pariatur eum sed ipsam doloremque porro dolor error, aliquid laudantium corrupti eos vero. Veritatis, sint minus. Iste beatae facilis officia similique? Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, tenetur dolore ab perspiciatis sint, debitis reprehenderit error sequi cumque at commodi laborum earum. Laudantium esse, cupiditate reprehenderit recusandae quam officiis?</p>
+                            <a href="#" class="slider__section-link">В каталог</a>
+                        </div>
+                    </div>
+                    <div class="slider__section">
+                        <div class="slider__section-header-wrp">
+                            <p class="slider__section-number">01</p>
+                            <p class="slider__section-text-header">Видеокамеры и видеорегистраторы</p>
+                        </div>
+                        <div class="slider__section-text-wrp">
+                            <p class="slider__section-text">ведут круглосуточный контроль происходящего на объекте. Стабильно передают изображение хорошего качества при естественном или искусственном освещении, а также в условиях плохой видимости.</p>
+                            <a href="#" class="slider__section-link">В каталог</a>
+                        </div>
+                    </div>
+                    <div class="slider__section">
+                        <div class="slider__section-header-wrp">
+                            <p class="slider__section-number">01</p>
+                            <p class="slider__section-text-header">Видеокамеры и видеорегистраторы</p>
+                        </div>
+                        <div class="slider__section-text-wrp">
                             <p class="slider__section-text">ведут круглосуточный контроль происходящего на объекте. Стабильно передают изображение хорошего качества при естественном или искусственном освещении, а также в условиях плохой видимости.</p>
                             <a href="#" class="slider__section-link">В каталог</a>
                         </div>
@@ -53,6 +73,9 @@
                             <a href="#" class="slider__section-link">В каталог</a>
                         </div>
                     </div>
+                </div>
+                <div class="slider__controls">
+                    <button>click</button>
                 </div>
             </div>
         </main>
