--- a/sliderGV/index.html
+++ b/sliderGV/index.html
@@ -26,7 +26,7 @@
                     <div class="slider__section">
                         <div class="slider__section-header-wrp">
                             <p class="slider__section-number">01</p>
-                            <p class="slider__section-text-header">Видеокамеры и видеорегистраторы</p>
+                            <p class="slider__section-text-header">Первый Видеокамеры и видеорегистраторы</p>
                         </div>
                         <div class="slider__section-text-wrp">
                             <p class="slider__section-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora pariatur eum sed ipsam doloremque porro dolor error, aliquid laudantium corrupti eos vero. Veritatis, sint minus. Iste beatae facilis officia similique? Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, tenetur dolore ab perspiciatis sint, debitis reprehenderit error sequi cumque at commodi laborum earum. Laudantium esse, cupiditate reprehenderit recusandae quam officiis?</p>
@@ -35,47 +35,57 @@
                     </div>
                     <div class="slider__section">
                         <div class="slider__section-header-wrp">
-                            <p class="slider__section-number">01</p>
-                            <p class="slider__section-text-header">Видеокамеры и видеорегистраторы</p>
+                            <p class="slider__section-number">02</p>
+                            <p class="slider__section-text-header">Второй Видеокамеры и видеорегистраторы</p>
                         </div>
                         <div class="slider__section-text-wrp">
-                            <p class="slider__section-text">ведут круглосуточный контроль происходящего на объекте. Стабильно передают изображение хорошего качества при естественном или искусственном освещении, а также в условиях плохой видимости.</p>
+                            <p class="slider__section-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, unde ut cum omnis repellendus amet qui facilis ipsum ea doloribus voluptatibus a minus temporibus aperiam dolorem provident culpa sequi alias!</p>
                             <a href="#" class="slider__section-link">В каталог</a>
                         </div>
                     </div>
                     <div class="slider__section">
                         <div class="slider__section-header-wrp">
-                            <p class="slider__section-number">01</p>
-                            <p class="slider__section-text-header">Видеокамеры и видеорегистраторы</p>
+                            <p class="slider__section-number">03</p>
+                            <p class="slider__section-text-header">Tretiy Видеокамеры и видеорегистраторы</p>
                         </div>
                         <div class="slider__section-text-wrp">
-                            <p class="slider__section-text">ведут круглосуточный контроль происходящего на объекте. Стабильно передают изображение хорошего качества при естественном или искусственном освещении, а также в условиях плохой видимости.</p>
+                            <p class="slider__section-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet voluptatem dolore maxime vitae deserunt ullam nihil suscipit consequuntur. Commodi vitae necessitatibus esse, explicabo magnam voluptatum minus soluta nesciunt quis! Veritatis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum commodi quod at vero quo nobis, quas molestiae et? Laboriosam consequuntur alias atque pariatur facilis fuga iure itaque asperiores officia magni?</p>
                             <a href="#" class="slider__section-link">В каталог</a>
                         </div>
                     </div>
                     <div class="slider__section">
                         <div class="slider__section-header-wrp">
-                            <p class="slider__section-number">01</p>
-                            <p class="slider__section-text-header">Видеокамеры и видеорегистраторы</p>
+                            <p class="slider__section-number">04</p>
+                            <p class="slider__section-text-header">Chetvertiy Видеокамеры и видеорегистраторы</p>
                         </div>
                         <div class="slider__section-text-wrp">
-                            <p class="slider__section-text">ведут круглосуточный контроль происходящего на объекте. Стабильно передают изображение хорошего качества при естественном или искусственном освещении, а также в условиях плохой видимости.</p>
+                            <p class="slider__section-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis facilis possimus tempora modi vero debitis blanditiis eius culpa ad est? Doloribus illum id recusandae blanditiis harum dignissimos voluptates, repellat soluta!</p>
                             <a href="#" class="slider__section-link">В каталог</a>
                         </div>
                     </div>
                     <div class="slider__section">
                         <div class="slider__section-header-wrp">
-                            <p class="slider__section-number">01</p>
-                            <p class="slider__section-text-header">Видеокамеры и видеорегистраторы</p>
+                            <p class="slider__section-number">05</p>
+                            <p class="slider__section-text-header">Piatiy Видеокамеры и видеорегистраторы</p>
                         </div>
                         <div class="slider__section-text-wrp">
-                            <p class="slider__section-text">ведут круглосуточный контроль происходящего на объекте. Стабильно передают изображение хорошего качества при естественном или искусственном освещении, а также в условиях плохой видимости.</p>
+                            <p class="slider__section-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit rerum soluta voluptatem error. Laborum optio laboriosam quod adipisci! Maxime reprehenderit esse quidem commodi porro minima hic fugit sit rem asperiores.</p>
                             <a href="#" class="slider__section-link">В каталог</a>
                         </div>
                     </div>
                 </div>
                 <div class="slider__controls">
-                    <button>click</button>
+                    <div class="slider__controls-btn prev-btn">
+                        <img src="images/svg/left.svg">
+                    </div>
+                    <div class="slider__controls-dot"></div>
+                    <div class="slider__controls-dot"></div>
+                    <div class="slider__controls-dot"></div>
+                    <div class="slider__controls-dot"></div>
+                    <div class="slider__controls-dot"></div>
+                    <div class="slider__controls-btn next-btn">
+                        <img src="images/svg/right.svg">
+                    </div>
                 </div>
             </div>
         </main>
